# can2vss-feeder

./: .dockerignore  .gitignore  BUILD.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
src/: main.cpp
tests/integration/: README.md  test_can2vss_feeder_integration.cpp
tests/integration/test_data/: model3_mappings_dag.yaml
